WIP fix vertical layout-shift on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,6 +220,7 @@ nav ul li a.active::after {
 
 .hero-section h1 {
     max-height: 80px;
+    min-height: 60px;
     margin-bottom: 2em;
 }
 
@@ -735,6 +736,9 @@ footer p {
     }
     .hero-section h1 {
         font-size: 1.5em;
+        max-height: 120px;
+        min-height: 60px;
+        max-width: 335px;
     }
     .hero-section p {
         font-size: 1.2m;
